# Lifeguard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lifeguard-qnx-camera-probe.txt
build-online/kleidiai-source/: .bazelrc  .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  kai_defs.bzl
build-online/kleidiai-source/benchmark/: cycle_counter.hpp
build-online/kleidiai-source/benchmark/dwconv/: dwconv_benchmark_logic.hpp
build-online/kleidiai-source/benchmark/imatmul/: imatmul_benchmark_logic.hpp  imatmul_interface.hpp  imatmul_registry.cpp  imatmul_runner.hpp
build-online/kleidiai-source/benchmark/matmul/: matmul_benchmark_logic.hpp  matmul_interface.hpp  matmul_registry.cpp  matmul_runner.hpp
build-online/kleidiai-source/docs/: README.md  microkernel_tables.md  microkernel_testing.md
build-online/kleidiai-source/examples/conv2d_imatmul_clamp_f16_f16_f16p_sme2/: CMakeLists.txt
build-online/kleidiai-source/examples/dwconv_clamp_f32_f32_f32p_planar_sme2/: CMakeLists.txt
build-online/kleidiai-source/examples/matmul_clamp_f16_f16_f16p/: CMakeLists.txt  matmul_clamp_f16_f16_f16p.cpp
build-online/kleidiai-source/examples/matmul_clamp_f32_bf16p_bf16p/: CMakeLists.txt  matmul_clamp_f32_bf16p_bf16p.cpp
build-online/kleidiai-source/examples/matmul_clamp_f32_qai8dxp_qsi4c32p/: CMakeLists.txt  matmul_clamp_f32_qai8dxp_qsi4c32p.cpp
build-online/kleidiai-source/examples/matmul_clamp_f32_qai8dxp_qsi4cxp/: CMakeLists.txt  matmul_clamp_f32_qai8dxp_qsi4cxp.cpp
build-online/kleidiai-source/examples/matmul_clamp_f32_qsi8d32p_qsi4c32p/: CMakeLists.txt  matmul_clamp_f32_qsi8d32p_qsi4c32p.cpp
build-online/kleidiai-source/kai/: kai_common.h  kai_common_sme_asm.S
build-online/kleidiai-source/kai/ukernels/matmul/: BUILD.bazel  README.md  kai_matmul.h  kai_matmul_pack_lhs.h  kai_matmul_pack_lhs_types.h  kai_matmul_pack_rhs.h  kai_matmul_pack_rhs_types.h  kai_matmul_types.h
build-online/kleidiai-source/kai/ukernels/matmul/imatmul_clamp_f32_f32_f32p/: kai_imatmul_clamp_f32_f32_f32p4vlx1b_6x4vl_sve_mla.c  kai_imatmul_clamp_f32_f32_f32p4vlx1b_6x4vl_sve_mla.h  kai_imatmul_clamp_f32_f32_f32p4vlx1b_6x4vl_sve_mla_asm.S  kai_imatmul_clamp_f32_f32_f32p_interface.h
build-online/kleidiai-source/kai/ukernels/matmul/matmul_clamp_f16_qai8dxp_qsi8cxp/: kai_matmul_clamp_f16_qai8dxp1vlx4_qsi8cxp4vlx4_1vlx4vl_sme2_mopa.c  kai_matmul_clamp_f16_qai8dxp1vlx4_qsi8cxp4vlx4_1vlx4vl_sme2_mopa.h  kai_matmul_clamp_f16_qai8dxp1vlx4_qsi8cxp4vlx4_1vlx4vl_sme2_mopa_asm.S  kai_matmul_clamp_f16_qai8dxp1x4_qsi8cxp4vlx4_1x4vl_sme2_dot.c  kai_matmul_clamp_f16_qai8dxp1x4_qsi8cxp4vlx4_1x4vl_sme2_dot.h  kai_matmul_clamp_f16_qai8dxp1x4_qsi8cxp4vlx4_1x4vl_sme2_dot_asm.S
build-online/kleidiai-source/kai/ukernels/matmul/matmul_clamp_f32_f16p_qsi4c32p/: kai_matmul_clamp_f32_f16p1vlx2_qsi4c32p4vlx2_1vlx4vl_sme2_mopa.c  kai_matmul_clamp_f32_f16p1vlx2_qsi4c32p4vlx2_1vlx4vl_sme2_mopa.h  kai_matmul_clamp_f32_f16p1vlx2_qsi4c32p4vlx2_1vlx4vl_sme2_mopa_asm.S
build-online/kleidiai-source/kai/ukernels/matmul/matmul_clamp_f32_f32p_f32p/: kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_16vsx4vs_sme2_mopa_asm.S  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_4vsx16vs_sme2_mopa_asm.S  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_4vsx4vs_sme2_mopa_asm.S  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_4vsx8vs_sme2_mopa_asm.S  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_8vsx4vs_sme2_mopa_asm.S  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_8vsx8vs_sme2_mopa.c  kai_matmul_clamp_f32_f32p4vsx1_f32p4vsx1bf32_8vsx8vs_sme2_mopa_asm.S
build-online/kleidiai-source/kai/ukernels/matmul/pack/: kai_lhs_quant_pack_qai8dxp_f16_neon.c  (+22 more)
build-online/kleidiai-source/test/: BUILD.bazel
build-online/kleidiai-source/test/common/: cpu_info.cpp  data_type.hpp  enum_utils.hpp  int2.cpp  int2.hpp  logging.hpp  matmul_shape_generator.hpp  matmul_test_common.cpp  matmul_test_common.hpp  memory.cpp  memory.hpp  numeric_limits.hpp  printer.cpp  safe_math.hpp  seed.cpp  seed.hpp  type_traits.hpp
build-online/kleidiai-source/test/nextgen/: main.cpp
build-online/kleidiai-source/test/nextgen/common/: expected.hpp  poly.hpp  shape.hpp  test_config.cpp  test_config.hpp
build-online/kleidiai-source/test/nextgen/format/: block2d_row_format.cpp  block2d_row_format.hpp  fill.hpp  format.hpp  plain_format.cpp  plain_format.hpp
build-online/kleidiai-source/test/nextgen/harness/: kernel_wrapper.hpp  tensor.hpp
build-online/kleidiai-source/test/nextgen/quantization/: asymm_linear_quantizer.cpp  asymm_linear_quantizer.hpp  quantizer.hpp  symm_linear_quantizer.cpp  symm_linear_quantizer.hpp
build-online/kleidiai-source/test/nextgen/reference/: clamp.cpp  clamp.hpp  compare.cpp  compare.hpp  pack.cpp  print.cpp  print.hpp  reduce.cpp  reduce.hpp  unary_elementwise.cpp  unary_elementwise.hpp
build-online/kleidiai-source/test/nextgen/tests/: matmul_test_next.cpp  poly_test.cpp
build-online/kleidiai-source/test/reference/: cast.cpp  cast.hpp  clamp.cpp  clamp.hpp  dwconv.cpp  fill.cpp  matmul.cpp  pad.cpp  quantize.cpp
build-online/kleidiai-source/test/tests/: buffer_test.cpp  dwconv_test.cpp  imatmul_test.cpp  matmul_clamp_bf16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_bf16p_bf16p_test.cpp  matmul_clamp_f16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f16_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_bf16p_bf16p_test.cpp  matmul_clamp_f32_f16p_qsi4c32p_test.cpp  matmul_clamp_f32_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsu2cxp_test.cpp  matmul_clamp_f32_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_qsi8d32p_qsi4c32p_test.cpp  matmul_clamp_qai8_qai8p_qsi8cxp_test.cpp  matmul_clamp_qai8dxp_qsi4c32p_test.cpp  matmul_test.cpp
build-online/kleidiai-source/tools/: check_api_compat.py  check_benchmark_microkernels.py  check_microkernel_tables.py  check_squash_commit_message.py
build-online/kleidiai-source/tools/utils/: __init__.py  git.py
(+161 files in other folders)
