#
# SPDX-FileCopyrightText: Copyright 2026 Arm Limited and/or its affiliates <open-source-office@arm.com>
#
# SPDX-License-Identifier: Apache-2.0
#

module(
    name = "kleidiai",
    repo_name = "com_arm_kleidiai",
)

kai_local_archive = use_repo_rule("//:kai_defs.bzl", "kai_local_archive")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")

kai_local_archive(
    name = "com_google_googletest",
    archive = "//:third_party/googletest-v1.17.0.zip",
    strip_prefix = "googletest-1.17.0",
)

kai_local_archive(
    name = "com_google_benchmark",
    archive = "//:third_party/benchmark-v1.9.4.zip",
    strip_prefix = "benchmark-v1.9.4",
)
